# RokTracker

./: .gitignore  LICENSE  README.md  adbutils.py  alliance-scanner.ps1  alliance-scanner.py  alliance_scanner_console.py  alliance_scanner_ui.py  check_python.py  config.json  dummy_root.py  graphic_scanner.ps1  graphic_scanner.py  honor_scanner_console.py  honor_scanner_ui.py  install_scanner.bat  install_scanner.ps1  install_scanner.py  kingdom_scanner_console.py  kingdom_scanner_ui.py  main.py  neural_network.py  package.json  pnpm-lock.yaml  pyproject.toml  quasar.config.ts  requirements.txt  requirements_win32.txt  requirements_win64.txt  rok-scanner.ps1  rok-scanner.py  rok_scanner.ps1  rok_scanner.py  rok_tracker.spec  rok_ui_positions.py  run_scanner.bat  run_scanner_ui.bat  scanner_console.py  scanner_ui.py  schema_generator.py  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test_bundle.yml
config/: config.json  gui_config.json  honor_defaults.json  kingdom_defaults.json  seed_defaults.json
config/internal/: alliance.json  honor.json  kingdom.json  seed.json
config/schemas/: app_config_schema.json  gui_config_schema.json  kingdom_options_schema.json  kingdom_scanner_schema.json  ranking_options_schema.json  ranking_scanner_schema.json
gui_frontend/: package.json  pnpm-lock.yaml  quasar.config.ts
gui_frontend/node_scripts/: generateZod.ts
inputs/: alliance_1_person_scroll.txt  honor_1_person_scroll.txt  kingdom_1_person_scroll.txt
scanner_utils/: adb_utils.py  general_utils.py  ocr_utils.py  validator.py
src/: App.vue
(+104 files in other folders)
