[project]
name = "rok-tracker"
version = "6.0.0"
description = "A python utility to scan kingdoms and ranking in Rise of Kingdoms"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "androidviewclient>=25.0.0",
    "copykitten>=2.0.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas[excel]>=3.0.3",
    "pathvalidate>=3.3.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "tesserocr>=2.10.0; platform_system == 'Linux'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp314-cp314-win_amd64.whl ; platform_system == 'Windows'",
    "ttkbootstrap>=1.20.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pymend>=3.2.2",
    "ruff>=0.15.16",
]

[tool.pymend]
output-style = "google"